k8s-files/OPA-gatekeeper/pdso-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: enforcetrustedimages
spec:
  crd:
    spec:
        names:
          kind: enforcetrustedimages
        validation:
          openAPIV3Schema:
            type: object
            properties:
              images:
                type: array
                items:
                  type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package enforcetrustedimages
        trusted_images={images |
          images = input.parameters.images[_]}
          images_trusted(str,patterns){
            image_matches(str, patterns[_])}
          image_matches(str,pattern){
            contains(str, pattern)}
          violation[{"msg":msg}]{
            input.review.objectimage:=input.review.object.spec.containers[_].imagename:=input.review.object.metadata.namenotimages_trusted(image, trusted_images)msg:=sprintf("pod%qhasanimagethatisnottrustedbyyourorganization%q.Followthetrustedimages%v", [name, image, trusted_images])}
